[project]
name = "MomokoBot"
version = "0.1.0"
description = "MomokoBot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    "nonebot_plugin_guild_patch"
]
plugin_dirs = [
    "basic_plugins",
    "plugins",
    "other_plugins"
]

[tool.poetry]
name = "MomokoBot"
version = "0.1.0"
description = "MomokoBot"
authors = ["月ヶ瀬"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/tkgs0/Momoko"
repository = "https://github.com/tkgs0/Momoko"
keywords = ["nonebot", "momoko", "qqbot"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
nb-cli = ">=1.4.1"
nonebot2 = {extras = ["fastapi"], version = "^2.2.1"}
nonebot-adapter-onebot = "^2.4.3"
nonebot-plugin-alconna = ">=0.40.1"
nonebot-plugin-apscheduler = ">=0.4.0"
nonebot-plugin-imageutils = ">=0.1.17"
nonebot-plugin-send-anything-anywhere = [{ version = ">=0.6.1" }]
aiofiles = ">=23.2.1"
aiohttp = {extras = ["speedups"], version = ">=3.9.4"}
arrow = ">=1.3.0"
async_timeout = ">=4.0.3"
binance-connector = ">=3.7.0"
cachetools = ">=5.3.3"
dbutils = ">=3.1.0"
deep-translator = ">=1.11.4"
diro-py = ">=0.1.1"
diskcache = ">=5.6.3"
emoji = ">=2.11.0"
feedparser = ">=6.0.11"
imagehash = ">=4.3.1"
langid = ">=1.1.6"
magneturi = ">=1.3"
picimagesearch = ">=3.9.7"
pikpakapi = ">=0.1.6"
pil-utils = ">=0.1.7"
psutil = ">=5.9.8"
pydub = ">=0.25.1"
python-qbittorrent = ">=0.4.3"
shelved-cache = ">=0.3.1"
tenacity = ">=8.2.3"
tinydb = ">=4.8.0"
ujson = ">=5.9.0"

[tool.poetry.dev-dependencies]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

